--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -1,5 +1,8 @@
+@charset "UTF-8";
+/* CSS Document */
+ 
 .highlight .hll { background-color: #404040 }
-.highlight  { color: #d0d0d0 }
+.highlight { color: #d0d0d0 }
 .highlight .c { color: #999999; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .g { color: #d0d0d0 } /* Generic */
